chore(ngx-statewise-showcase): wip

--- a/projects/ngx-statewise-showcase/src/app/app.component.html
+++ b/projects/ngx-statewise-showcase/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [class]="[themeService.themeSignal(), 'd-flex']">
+<div [class]="['content']">
   <app-navigation />
   <div class="nav-content">
     <router-outlet />
