--- a/projects/ngx-statewise-showcase/src/app/features/landing-page/landing-page.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/landing-page/landing-page.component.html
@@ -1,7 +1,3 @@
-<button class="primary-btn sign-in-btn" routerLink="/login" mat-stroked-button>
-  <span class="d-flex center text-base gap-3">sign in</span>
-</button>
-
 <div class="landing-page-container">
   <img
     class="landing-page-logo"
@@ -9,10 +5,10 @@
     alt="ngx-statewise"
   />
   <button
-    class="primary-btn sign-up-btn"
-    routerLink="/signup"
+    class="primary-btn sign-in-btn"
+    routerLink="/login"
     mat-stroked-button
   >
-    <span class="d-flex center text-base gap-3">signup here</span>
+    sign in
   </button>
 </div>
