--- a/projects/ngx-statewise-showcase/src/app/app.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/app.component.scss
@@ -1,6 +1,13 @@
+.content {
+  display: flex;
+  flex-grow: 1;
+  min-height: 100vh; 
+  width: 100%;
+}
+
 .nav-content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
 }
