feat(ngx-statewise-showcase): implement login and authentication flow with fake backend
Added authentication logic and state transitions using ngx-statewise.
Simulated backend via Angular interceptor and fake API for login and logout.

--- a/projects/ngx-statewise-showcase/src/app/core/layouts/navigation/navigation.component.html
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/navigation/navigation.component.html
@@ -4,7 +4,7 @@
       <a class="side-nav-logo" mat-item [routerLink]="''">
         <img class="side-nav-logo-img" src="icon-logo.png" alt="" />
       </a>
-      @if(logedInDisplay()) { @for (item of navigationItem; track $index) {
+      @if(logedInDisplay()) { @for (item of navigationitems; track $index) {
       <a
         mat-item
         class="nav-groupe-icon color-secondary"
