refactor(architecture): enforce feature isolation and improve shared module usage

--- a/projects/ngx-statewise-showcase/src/app/app.component.html
+++ b/projects/ngx-statewise-showcase/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div [class]="['content']">
-  <app-navigation />
+  <app-navigation  [navigationitems]="navigationItems" />
   <div class="nav-content">
     <router-outlet />
   </div>
