--- a/projects/ngx-statewise-showcase/src/app/app.component.html
+++ b/projects/ngx-statewise-showcase/src/app/app.component.html
@@ -1,5 +1,4 @@
-
-<div [class]="['content']">
+<div class="content">
   <app-navigation  [navigationitems]="navigationItems" />
   <div class="nav-content">
     <router-outlet />
