--- a/projects/ngx-statewise-showcase/src/app/app.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .content {
   display: flex;
   flex-grow: 1;
-  min-height: 100vh; 
-  width: 100%;
+  min-height: 100vh;
+  width: calc(100% - var(--ma-variable));
 }
 
 .nav-content {
@@ -11,4 +11,3 @@
   height: 100vh;
   width: 100%;
 }
-
