--- a/projects/ngx-statewise-showcase/src/app/feature/project-management/pages/task-page/task-page.component.html
+++ b/projects/ngx-statewise-showcase/src/app/feature/project-management/pages/task-page/task-page.component.html
@@ -1,1 +1,15 @@
-<p>task-page works!</p>
+<app-side-panel #taskPanel>
+  <div class="controls">
+    <button (click)="toggleSideNav()">Toggle Sidenav</button>
+    <button (click)="openSideNav()">Ouvrir Sidenav</button>
+    <button (click)="closeSideNav()">Fermer Sidenav</button>
+  </div>
+
+  @for (item of this.taskManager.tasks(); track $index) {
+  <h2>{{ item.title }}</h2>
+  <p>{{ item.description }}</p>
+
+  @for (user of item.assignedUserIds; track $index) {
+  <p>{{ user }}</p>
+  } }
+</app-side-panel>
