--- a/projects/ngx-statewise-showcase/src/styles.scss
+++ b/projects/ngx-statewise-showcase/src/styles.scss
@@ -5,6 +5,7 @@
 html,
 body {
   height: 100%;
+ 
 }
 body {
   margin: 0;
@@ -14,6 +15,7 @@ body {
 .page {
   margin-top: auto;
   margin-bottom: auto;
+  width: 100%;
 }
 
 :root {
