--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
@@ -11,3 +11,10 @@
   overflow-y: auto;
   overflow-x: auto;
 }
+
+:host-context(.light) .side-panel-container,
+:host-context(.dark) .side-panel-container {
+  transition: background-color 0.5s ease, color 0.5s ease !important;
+  background-color: var(--mat-sys-background);
+  color: var(--mat-sys-on-background);
+}
