--- a/projects/ngx-statewise-showcase/src/app/core/layouts/navigation/navigation.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/navigation/navigation.component.scss
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: var(--ma-variable);
-  height: 100%;
+  width: var(--nav-width);
+  height: 100vh;
   border-right: 1px solid #232125;
-  
+  overflow-y: auto;
+  overflow-x: auto;
+
   .side-nav-content {
     display: flex;
     flex-direction: column;
@@ -47,8 +49,6 @@
       color: #746e7c;
       position: relative;
       transition: color 0.3s ease, transform 0.3s ease;
-
-      
 
       &::before {
         content: "";
