--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.html
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container class="side-panel-container">
   <mat-sidenav
     #sidenav
     fixedInViewport="fixed"
@@ -6,9 +6,9 @@
     mode="over"
     class="side-panel-content"
   >
-    <ng-content select="[slot=panel-content]"></ng-content>
+    <ng-content select="[slot=panel-content]" />
   </mat-sidenav>
   <mat-sidenav-content class="view-content">
-    <ng-content></ng-content>
+    <ng-content />
   </mat-sidenav-content>
 </mat-sidenav-container>
