--- a/projects/ngx-statewise-showcase/src/styles.scss
+++ b/projects/ngx-statewise-showcase/src/styles.scss
@@ -5,7 +5,6 @@
 html,
 body {
   height: 100%;
- 
 }
 body {
   margin: 0;
@@ -16,9 +15,10 @@ body {
   margin-top: auto;
   margin-bottom: auto;
   width: 100%;
+  height: 100%;
 }
 
 :root {
-  --ma-variable: clamp(80px, 10vw, 110px);
-  --hauteur-restante: calc(100vh - var(--ma-variable));
+  --nav-width: clamp(80px, 10vw, 110px);
+  --hauteur-restante: calc(100vh - var(--nav-width));
 }
