chore(ngx-statewise-showcase): wip project-task-lis, personal-task

--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
@@ -11,6 +11,9 @@
   overflow-y: auto;
   overflow-x: auto;
 }
+.panel-content{
+  height: 100vh;
+}
 
 :host-context(.light) .side-panel-container,
 :host-context(.dark) .side-panel-container {
