--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.html
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.html
@@ -8,7 +8,7 @@
   >
     <ng-content select="[slot=panel-content]" />
   </mat-sidenav>
-  <mat-sidenav-content class="view-content">
+  <mat-sidenav-content select="[slot=view-content]" class="view-content">
     <ng-content />
   </mat-sidenav-content>
 </mat-sidenav-container>
