chore(ngx-statewise-showcase): dragable cdk for tasks kanban

--- a/projects/ngx-statewise-showcase/src/app/features/task/components/personal-task-list/personal-task-list.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/personal-task-list/personal-task-list.component.scss
@@ -1,4 +1,5 @@
 .personal-task-list-container {
-  margin: 1rem;
-  min-height: calc(100vh - 203px);
+  box-sizing: border-box;
+  padding-top: 1rem;
+  min-height: calc(100vh - 187px);
 }
