--- a/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.html
@@ -22,37 +22,28 @@
       [id]="'dropList-' + col.id"
       [cdkDropListData]="col.tasks || []"
       [cdkDropListConnectedTo]="getConnectedDropListIds()"
+      (cdkDropListDropped)="onTaskDrop($event)"
     >
       @for (task of col.tasks; track task.id) {
-      <mat-card cdkDrag [cdkDragData]="task" appearance="outlined" class="task-card">
+      <mat-card
+        cdkDrag
+        [cdkDragData]="task"
+        appearance="outlined"
+        class="task-card"
+      >
+
         <mat-card-header>
           <mat-card-title>{{ task.title }}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
           <p>{{ task.description }}</p>
         </mat-card-content>
+
       </mat-card>
       }
     </div>
     }
   </div>
 
-  <div class="kanban-task-body">
-    @for (col of columns(); track col.id) {
-
-    <div class="kanban-task-column">
-      @for (task of col.tasks; track task.id) {
-      <mat-card appearance="outlined" class="task-card">
-        <mat-card-header>
-          <mat-card-title>{{ task.title }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p>{{ task.description }}</p>
-        </mat-card-content>
-      </mat-card>
-      }
-    </div>
-
-    }
-  </div>
+ 
 </div>
