feat(ngx-statewite-showcase): kanban tasks grouped by projects

--- a/projects/ngx-statewise-showcase/src/app/features/task/components/project-task-list/project-task-list.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/project-task-list/project-task-list.component.scss
@@ -2,4 +2,10 @@
   box-sizing: border-box;
   padding-top: 1rem;
   min-height: calc(100vh - 187px);
+
+  .project-task-list-expansion-panel {
+    background: transparent !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
+  }
 }
