--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
@@ -7,7 +7,8 @@
 .view-content {
   box-sizing: border-box;
   height: 100vh;
-  padding: 1rem;
+  padding-left: 3rem;
+  padding-right: 2rem;
   overflow-y: auto;
   overflow-x: auto;
 }
