--- a/projects/ngx-statewise-showcase/src/app/features/task/components/project-task-list/project-task-list.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/project-task-list/project-task-list.component.html
@@ -1,20 +1,23 @@
 <div class="project-task-list-container">
   <mat-accordion displayMode="flat" multi>
-
     @for (project of this.projectManager.projects(); track $index) {
-    <mat-expansion-panel>
+    <mat-expansion-panel
+      togglePosition="before"
+      class="project-task-list-expansion-panel"
+    >
       <mat-expansion-panel-header>
-        <mat-panel-title> {{ project.title }}</mat-panel-title>
+        <mat-panel-title [class]="'tag-' + project.color">
+          {{ project.title }}</mat-panel-title
+        >
       </mat-expansion-panel-header>
 
       <table mat-table [dataSource]="getFilteredTasks(project.id)">
-
         @for (column of columns; track column) {
         <ng-container [matColumnDef]="column.columnDef">
-          <th mat-header-cell *matHeaderCellDef>
+          <th mat-header-cell *matHeaderCellDef [style.width]="column.maxWidth">
             {{ column.header }}
           </th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" [style.width]="column.maxWidth">
             {{ column.cell(row) }}
           </td>
         </ng-container>
@@ -27,11 +30,8 @@
           (click)="selectTask(item)"
           *matRowDef="let item; columns: displayedColumns"
         ></tr>
-
       </table>
-
     </mat-expansion-panel>
     }
-    
   </mat-accordion>
 </div>
