--- a/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.scss
@@ -4,60 +4,61 @@
   display: flex;
   flex-direction: column;
   height: calc(100vh - 187px);
-  max-width: calc(var(--column-width) * 3);
+  margin-right: 1rem;
 
-  .kanban-task-section {
+  .project-accordion {
     margin-top: 1rem;
+
+    .kanban-project-task-expansion-panel {
+      background: transparent !important;
+      border-radius: 0 !important;
+      box-shadow: none !important;
+
+      .kanban-task-header-section {
+        max-width: calc(var(--column-width) * 3);
+        padding-left: 1rem;
+        padding-right: 1rem;
+
+        flex-shrink: 0;
+        position: sticky;
+        top: 0;
+        z-index: 10;
+        padding-bottom: 1rem;
+        background-color: var(--mat-sys-background, #fff);
+      }
+
+      .kanban-task-header {
+        max-width: calc(var(--column-width) * 3);
+        width: 100%;
+        display: flex;
+        justify-content: left !important;
+        margin-left: 1rem;
+      }
+
+      .kanban-task-column-header {
+        max-width: var(--column-width);
+        background-color: var(--mat-sys-surface);
+        border-radius: 0.3rem 0.3rem 0 0;
+      }
+
+      .kanban-task-body {
+        display: flex;
+        gap: 1rem;
+        flex: 1;
+        min-height: 80%;
+
+        .kanban-task-column {
+          box-sizing: border-box;
+          flex: 1;
+          max-width: var(--column-width);
+          display: flex;
+          flex-direction: column;
+          background-color: var(--mat-sys-surface);
+          padding: 1rem;
+          overflow-y: auto;
+          border-radius: 0 0 0.3rem 0.3rem;
+        }
+      }
+    }
   }
-
-  .kanban-task-header-section {
-    flex-shrink: 0;
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    padding-bottom: 1rem;
-    background-color: var(
-      --mat-sys-background,
-      #fff
-    ); /* Ajout d'un fond pour masquer le contenu en dessous */
-  }
-
-  .kanban-task-header {
-    width: 100%;
-    display: flex;
-    justify-content: left !important;
-    margin-left: 1rem;
-  }
-
-  .kanban-task-column-header {
-    max-width: var(--column-width);
-    background-color: var(--mat-sys-surface);
-    border-radius: 0.3rem 0.3rem 0 0;
-  }
-
-  .kanban-task-body {
-    display: flex;
-    gap: 1rem;
-    flex: 1;
-    min-height: 80%;
-  }
-
-  .kanban-task-column {
-    box-sizing: border-box;
-    flex: 1;
-    max-width: var(--column-width);
-    display: flex;
-    flex-direction: column;
-
-    background-color: var(--mat-sys-surface);
-    border-radius: 0.5rem;
-    margin-top: 1rem;
-    padding: 1rem;
-    overflow-y: auto;
-  }
-
-
-
-  
 }
-
