--- a/projects/ngx-statewise-showcase/src/app/shared/app-common/components/kanban-card/kanban-card.component.html
+++ b/projects/ngx-statewise-showcase/src/app/shared/app-common/components/kanban-card/kanban-card.component.html
@@ -1,4 +1,4 @@
-<mat-card cdkDrag [cdkDragData]="data()" class="kanban-card" appearance="outlined">
+<mat-card cdkDrag [cdkDragData]="data()" class="kanban-card cdk-drag-animating" appearance="outlined">
   <div class="card-type-indicator" [class]="'indicator-' + cardType()">
     <ng-content></ng-content>
   </div>
