--- a/projects/ngx-statewise-showcase/src/app/shared/app-common/components/kanban-card/kanban-card.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/shared/app-common/components/kanban-card/kanban-card.component.scss
@@ -20,3 +20,7 @@
 .indicator-low {
   border-left-color: #4caf50;
 }
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.3, 1);
+}
