feat(ngx-statewite-showcase): all tasks dashbord

--- a/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.html
@@ -1,5 +1,8 @@
 <app-side-panel #dashbordPanel>
-  <div slot="view-content">
+  <h1 class="dashbord-page-header">DASHBORD</h1>
+
+  <div class="dashbord-container" slot="view-content">
+    <app-dashbord-task-list></app-dashbord-task-list>
     <app-dashbord-kanban></app-dashbord-kanban>
   </div>
 
