--- a/projects/ngx-statewise-showcase/src/app/features/dashbord/components/dashbord-kanban/dashbord-kanban.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/dashbord/components/dashbord-kanban/dashbord-kanban.component.html
@@ -1,4 +1,4 @@
-<div class="dashbord-kanban-task-container">
+<mat-card class="dashbord-kanban-task-container">
   
   <div ><h2 class="dashbord-kanban-task-title">TASK KANBAN</h2></div>
 
@@ -40,4 +40,5 @@
     </div>
     }
   </div>
-</div>
+</mat-card>
+ 
