--- a/projects/ngx-statewise-showcase/src/app/features/dashbord/components/dashbord-kanban/dashbord-kanban.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/dashbord/components/dashbord-kanban/dashbord-kanban.component.scss
@@ -1,15 +1,17 @@
 .dashbord-kanban-task-container {
-  --column-width: 20%;
-  max-width: calc(var(--column-width) * 3);
-  max-height: 60vh;
+  height: 100%;
+  min-height: 20rem;
+  padding: 1rem;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  background-color: transparent;
 
   .dashbord-kanban-task-title {
     box-sizing: border-box;
     background-color: rgba(96, 165, 250, 0.25);
     padding: 0.5rem;
+    margin: 0 0 1rem 0;
   }
 
   .dashbord-kanban-task-header-section {
@@ -24,7 +26,6 @@
   }
 
   .dashbord-kanban-task-header {
-    max-width: calc(var(--column-width) * 3);
     width: 100%;
     margin-left: 1rem;
   }
@@ -38,7 +39,7 @@
     display: flex;
     gap: 1rem;
     flex: 1;
-    min-height: 80%;
+    height: 0%;
 
     .dashbord-kanban-task-column {
       box-sizing: border-box;
@@ -50,11 +51,5 @@
       overflow-y: auto;
       border-radius: 0 0 0.3rem 0.3rem;
     }
-  }
-}
-
-@media (max-width: 1080px) {
-  .dashbord-kanban-task-container {
-    --column-width: 33%;
   }
 }
