--- a/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.scss
@@ -1,3 +1,24 @@
-app-dashbord-kanban {
-  margin: 2rem;
+.dashbord-container {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 2fr 3fr;
+}
+
+.dashbord-page-header {
+  font-size: 3rem;
+  margin-top: 1rem;
+}
+
+app-dashbord-kanban,
+app-dashbord-task-list {
+  width: auto;
+  max-height: 60vh;
+}
+
+@media (max-width: 1080px) {
+  .dashbord-container {
+    grid-template-columns: 1fr;
+  }
 }
