chore(ngx-statewite-showcase): task details wip

--- a/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/dashbord/pages/dashbord-page/dashbord-page.component.html
@@ -2,7 +2,9 @@
   <h1 class="dashbord-page-header">DASHBORD</h1>
 
   <div class="dashbord-container" slot="view-content">
-    <app-dashbord-task-list></app-dashbord-task-list>
+    <app-dashbord-task-list
+      (taskSelected)="selectTask($event)"
+    ></app-dashbord-task-list>
     <app-dashbord-kanban></app-dashbord-kanban>
   </div>
 
