--- a/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/core/layouts/side-panel/side-panel.component.scss
@@ -2,6 +2,7 @@
   width: 60vw !important;
   border-radius: 0px !important;
   padding: 1rem;
+  background-color: var(--mat-sys-background, #fff);
 }
 
 .view-content {
@@ -14,11 +15,4 @@
 }
 .panel-content{
   height: 100vh;
-}
-
-:host-context(.light) .side-panel-container,
-:host-context(.dark) .side-panel-container {
-  transition: background-color 0.5s ease, color 0.5s ease !important;
-  background-color: var(--mat-sys-background);
-  color: var(--mat-sys-on-background);
 }
