--- a/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.scss
+++ b/projects/ngx-statewise-showcase/src/app/features/task/components/task-kanban/task-kanban.component.scss
@@ -18,12 +18,6 @@
         max-width: calc(var(--column-width) * 3);
         padding-left: 1rem;
         padding-right: 1rem;
-
-        flex-shrink: 0;
-        position: sticky;
-        top: 0;
-        z-index: 10;
-        padding-bottom: 1rem;
         background-color: var(--mat-sys-background, #fff);
       }
 
@@ -45,7 +39,7 @@
         display: flex;
         gap: 1rem;
         flex: 1;
-        min-height: 80%;
+        max-height: 80%;
 
         .kanban-task-column {
           box-sizing: border-box;
