--- a/projects/ngx-statewise-showcase/src/app/shared/app-common/components/task-details/task-details.component.html
+++ b/projects/ngx-statewise-showcase/src/app/shared/app-common/components/task-details/task-details.component.html
@@ -33,9 +33,7 @@
 
   <mat-divider class="section-divider"></mat-divider>
 
-
   <mat-tab-group class="details-tabs" mat-stretch-tabs="false">
- 
     <mat-tab>
       <ng-template mat-tab-label>
         <mat-icon class="tab-icon">info</mat-icon>
@@ -53,13 +51,16 @@
             <p>{{ selectedTask()!.description }}</p>
           </div>
         </div>
-        }
-
-        @if (selectedTask()!.dueDate) {
+        } @if (selectedTask()!.dueDate) {
         <div class="detail-section">
           <div class="section-header">
             <mat-icon
-              [class.overdue]="isDueDateOverdue(selectedTask()!.dueDate)"
+              [class.overdue]="
+                isDueDateOverdue(
+                  selectedTask()!.dueDate,
+                  selectedTask()?.status
+                )
+              "
             >
               schedule
             </mat-icon>
@@ -68,19 +69,19 @@
           @if (selectedTask()!.dueDate) {
           <div
             class="due-date-content"
-            [class.overdue]="isDueDateOverdue(selectedTask()!.dueDate)"
+            [class.overdue]="
+              isDueDateOverdue(selectedTask()!.dueDate, selectedTask()?.status)
+            "
           >
             <span>{{ formatDate(selectedTask()!.dueDate!) }}</span>
-            @if (isDueDateOverdue(selectedTask()!.dueDate)) {
+            @if (isDueDateOverdue(selectedTask()!.dueDate,
+            selectedTask()?.status)) {
             <mat-icon class="warning-icon">warning</mat-icon>
             }
           </div>
           }
         </div>
-        }
-
-       
-        @if (selectedTask()!.assignedUserIds &&
+        } @if (selectedTask()!.assignedUserIds &&
         selectedTask()!.assignedUserIds!.length > 0) {
         <div class="detail-section">
           <div class="section-header">
@@ -158,8 +159,6 @@
         </div>
       </div>
     </mat-tab>
-
-
   </mat-tab-group>
 </div>
 
@@ -167,8 +166,8 @@
 <div class="empty-state">
   <div class="empty-content">
     <mat-icon class="empty-icon">assignment</mat-icon>
-    <h3>Aucune tâche sélectionnée</h3>
-    <p>Sélectionnez une tâche dans la liste pour voir ses détails</p>
+    <h3>No Task Selected</h3>
+    <p>Select a task from the list to view its details</p>
   </div>
 </div>
 }
