refactor(ngx-statewite-showcase): reduce code duplication and improve SRP in task feature

--- a/projects/ngx-statewise-showcase/src/app/features/dashboard/components/dashboard-task-list/dashboard-task-list.component.html
+++ b/projects/ngx-statewise-showcase/src/app/features/dashboard/components/dashboard-task-list/dashboard-task-list.component.html
@@ -2,8 +2,8 @@
   <div><h2 class="dashboard-task-list-title">ALL TASK</h2></div>
 
   <div class="dashboard-task-list-scroll">
-    <table mat-table [dataSource]="this.tasks()!">
-      @for (column of columns; track column) {
+    <table mat-table [dataSource]="tasks()!">
+      @for (column of displayedColumns(); track column.columnDef) {
       <ng-container [matColumnDef]="column.columnDef">
         <th mat-header-cell *matHeaderCellDef>
           {{ column.header }}
@@ -14,12 +14,12 @@
       </ng-container>
       }
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="columnKeys()"></tr>
       <tr
         mat-row
         class="clickable-row"
-        (click)="selectTask(item)"
-        *matRowDef="let item; columns: displayedColumns"
+        (click)="selectTask(row)"
+        *matRowDef="let row; columns: columnKeys()"
       ></tr>
     </table>
   </div>
